<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context="com.codepath.gridimagesearch.fragments.FilterSearchDialog">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/image_size_spinner_label" />

        <Spinner
            android:id="@+id/spinnerImageSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/image_sizes_array" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/color_filter_spinner_label" />

        <Spinner
            android:id="@+id/spinnerColorFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/color_filters_array" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/image_type_spinner_label" />

        <Spinner
            android:id="@+id/spinnerImageType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/types_array" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/site_filter_spinner_label" />

        <EditText
            android:id="@+id/etSiteFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sites_filter_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>
